--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
-﻿{
+{
   "name": "uni-frame-work",
-  "version": "1.0.0",
+  "displayName": "Uni FrameWork",
+  "version": "1.0.1",
+  "unity": "2019.2",
   "description": "cool library",
   "author": "elipmoc <relipmoc101@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  }
 }
