--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "uni-frame-work",
   "displayName": "Uni FrameWork",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "unity": "2019.2",
   "description": "cool library",
   "author": "elipmoc <relipmoc101@gmail.com>",
   "license": "MIT",
   "dependencies": {
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elipmoc/uni-frame-work.git"
   }
 }
