--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "uni-frame-work",
   "displayName": "Uni FrameWork",
-  "version": "1.0.8",
-  "unity": "2019.2",
+  "version": "1.0.9",
+  "unity": "2019.3",
   "description": "cool library",
   "author": "elipmoc <relipmoc101@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/elipmoc/uni-frame-work.git"
